fixed navbar z-index issues

--- a/app/assets/stylesheets/discovery.scss
+++ b/app/assets/stylesheets/discovery.scss
@@ -49,6 +49,10 @@
     font-family: Overpass;
 }
 
+.discovery-sidebar * {
+    z-index: auto;
+}
+
 .discovery-sidebar h3:first-child {
     margin-top: 0;
     position: fixed;
